--- a/flickipedia/web/templates/index_anon.html
+++ b/flickipedia/web/templates/index_anon.html
@@ -3,23 +3,14 @@
 {% if error %}<p class="text-warning"><strong>Warning:</strong> {{ error }}</p>{% endif %}
 
 <div class="hero-unit">
-    <h1>TextLearn</h1>
-    <p class="margin-top:2em">Welcome to the site!</p>
+    <h1>Flickipedia</h1>
     <p class="margin-top:1em"><a class="btn btn-primary btn-large" href="/about/">Learn more</a></p>
 </div>
 
-<form role="form" action="{{ url_for('ingest') }}" method=post>
+<form role="form" action="{{ url_for('mashup') }}" method=post>
     <div class="form-group">
-        <label for="phraseInput">Say something:</label>
-        <input name="phraseInput" type="text" class="form-control" id="phraseInput" placeholder="Enter phrase">
-    </div>
-    <div class="form-group">
-        <label for="labelInput">Label it.</label>
-        <input name="labelInput" type="text" class="form-control" id="labelInput" placeholder="Enter label">
-    </div>
-    <div class="form-group">
-        <label for="modelInput">Which model?</label>
-        <input name="modelInput" type="text" class="form-control" id="modelInput" placeholder="Enter model">
+        <label for="article">Wikipedia Article:</label>
+        <input name="article" type="text" class="form-control" id="article" placeholder="Enter article">
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
 </form>
