mod - tweak ui & add about/contact.

--- a/flickipedia/web/templates/about.html
+++ b/flickipedia/web/templates/about.html
@@ -2,5 +2,7 @@
 {% block body %}
 <h2>About</h2>
 {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
-<p>This page will provide a short description of the project</p>
+<p>This is a mashup of two beautiful services: <a href="https://en.wikipedia.org">Wikipedia</a> & <a href="https://www.flickr.com">Flickr</a>.
+See more on the <a href="https://github.com/rfaulkner/Flickipedia">project page</a>.
+</p>
 {% endblock %}
