--- a/flickipedia/web/templates/register.html
+++ b/flickipedia/web/templates/register.html
@@ -6,7 +6,7 @@
 <link href="twitter-bootstrap-v2\docs\assets\css\bootstrap-responsive.css" rel="stylesheet">
 
 <div class="container">
-    <legend>Sign Up</legend>
+    <legend>Registration</legend>
     <div class="well">
         <form id="signup" class="form-horizontal" method="post" action="{{ url_for('register_process') }}">
             <legend>Sign Up</legend>
