add - enable login status in nav + simplify login access views.

--- a/flickipedia/web/templates/index.html
+++ b/flickipedia/web/templates/index.html
@@ -3,19 +3,13 @@
 {% if error %}<p class="text-warning"><strong>Warning:</strong> {{ error }}</p>{% endif %}
 
 <div class="hero-unit">
-<h1>TextLearn</h1>
-  <p class="margin-top:2em">Welcome to the site!</p>
-    <p class="margin-top:1em"><a class="btn btn-primary btn-large" href="/about/">Learn more</a></p>
+    <h1>Flickipedia</h1>
 </div>
 
-<form role="form">
+<form role="form" action="{{ url_for('mashup') }}" method=post>
     <div class="form-group">
-        <label for="phraseInput">Say something:</label>
-        <input type="text" class="form-control" id="phraseInput" placeholder="Enter phrase">
-    </div>
-    <div class="form-group">
-        <label for="labelInput">Label it</label>
-        <input type="text" class="form-control" id="labelInput" placeholder="Enter label">
+        <label for="article">Wikipedia Article:</label>
+        <input name="article" type="text" class="form-control" id="article" placeholder="Enter article">
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
 </form>
