mod - link disambiguation articles

--- a/flickipedia/web/templates/disambiguate.html
+++ b/flickipedia/web/templates/disambiguate.html
@@ -6,7 +6,7 @@
 
 <ul id="navigation">
 {% for item in options %}
-    <li>{{ item }}</li>
+    <li><a href="?article={{ item }}">{{ item }}</a></li>
 {% endfor %}
 </ul>
 
