--- a/flickipedia/web/templates/mashup.html
+++ b/flickipedia/web/templates/mashup.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
 
-<a href="https://www.flickr.com/photos/{{ item.owner }}/{{ item.photo_id }}" title="{{ item.title }}"><img src="https://farm{{ item.farm }}.staticflickr.com/{{ item.server }}/{{ item.photo_id }}_{{ item.secret }}.jpg" width="300" height="300"></a>
+<a href="https://www.flickr.com/photos/{{ photos.owner }}/{{ photos.photo_id }}" title="{{ photos.title }}"><img src="https://farm{{ photos.farm }}.staticflickr.com/{{ photos.server }}/{{ photos.photo_id }}_{{ photos.secret }}.jpg" width="300" height="300"></a>
 <div style="clear:both;">&nbsp;</div>
 <div style="clear:both;">&nbsp;</div>
 
