mod - name title photo

--- a/flickipedia/web/templates/mashup.html
+++ b/flickipedia/web/templates/mashup.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
 
-<a class='title-image' href="https://www.flickr.com/photos/{{ photos.owner }}/{{ photos.photo_id }}" title="{{ photos.title }}"><img src="https://farm{{ photos.farm }}.staticflickr.com/{{ photos.server }}/{{ photos.photo_id }}_{{ photos.secret }}.jpg" width="600" height="400"></a>
+<a class='title-image' href="https://www.flickr.com/photos/{{ title_photo.owner }}/{{ title_photo.photo_id }}" title="{{ title_photo.title }}"><img src="https://farm{{ title_photo.farm }}.staticflickr.com/{{ title_photo.server }}/{{ title_photo.photo_id }}_{{ title_photo.secret }}.jpg" width="600" height="400"></a>
 <div style="clear:both;">&nbsp;</div>
 <div style="clear:both;">&nbsp;</div>
 
