--- a/flickipedia/web/static/css/site.css
+++ b/flickipedia/web/static/css/site.css
@@ -4,3 +4,4 @@ body { padding-top: 60px; padding-bottom: 60px; }
 .nav li:last-child a { color: #0088cc; display: inline-block; }
 label.error { color: #af3333; }
 div.flash { margin: 4px 0 20px 0; }
+img.centered { display: block; margin-left: auto; margin-right: auto }
