--- a/flickipedia/web/templates/layout.html
+++ b/flickipedia/web/templates/layout.html
@@ -3,9 +3,9 @@
 <head>
 <title>Flickipedia</title>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/site.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/site.css') }}?0">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src="{{ url_for('static', filename='js/site.js') }}?32"></script>
+<script src="{{ url_for('static', filename='js/site.js') }}?34"></script>
 <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
 <script src="{{ url_for('static', filename='js/validate.min.js') }}"></script>
 </head>
