fix - article ref

--- a/flickipedia/web/templates/index.html
+++ b/flickipedia/web/templates/index.html
@@ -29,7 +29,7 @@
 <i><h5>Check out some recently visited articles...</h5></i>
 <ul>
 {% for a in accessed %}
-    <li><a href="?article={{a|safe}}">{{a|safe}}</a></li>
+    <li><a href="mashup?article={{a|safe}}">{{a|safe}}</a></li>
 {% endfor %}
 </ul>
 
