--- a/flickipedia/web/templates/layout.html
+++ b/flickipedia/web/templates/layout.html
@@ -32,6 +32,7 @@
               <li><a href="{{ url_for('about') }}">About</a></li>
               <li><a href="{{ url_for('contact') }}">Contact</a></li>
               <li><a href="{{ url_for('register') }}">Register</a></li>
+              <li><a href="{{ url_for('mwoauth') }}">MWAuth</a></li>
               <li class="pull-right">
               {% if current_user.is_authenticated() %}
                   <em>Welcome {{ current_user.name }}</em> <a href="/logout">(logout)</a>
