add - link back to article

--- a/flickipedia/web/templates/upload.html
+++ b/flickipedia/web/templates/upload.html
@@ -19,8 +19,9 @@
                 </div>
             </div>
         </form>
-       <!-- Link Back to article -->
-       <!-- Indicate if the photo has already been uploaded and by whom -->
+        <br>Back to <a href="{{article_url}}">{{article}}</a>
+
+       <!-- TODO - Indicate if the photo has already been uploaded and by whom -->
     </div>
 </div>
 
