--- a/flickipedia/web/templates/upload.html
+++ b/flickipedia/web/templates/upload.html
@@ -12,6 +12,8 @@
         <img src="{{photourl}}" width="600" height="600"><br><br>
         <form id="callback_url" class="form-horizontal" method="post" action="{{ url_for('upload_complete') }}">
             <input type="hidden" name="article" value="{{article}}">
+            <input type="hidden" name="photourl" value="{{photourl}}">
+            <input type="text" class="input-xlarge" id="filename" name="filename" placeholder="Filename">
             <button type="submit" class="btn btn-success">Upload</button>
         </form>
         <br>Back to <a href="{{article_url}}">{{article}}</a>
