little more pretty

--- a/flickipedia/web/static/css/site.css
+++ b/flickipedia/web/static/css/site.css
@@ -5,4 +5,4 @@ body { padding-top: 60px; padding-bottom: 60px; }
 label.error { color: #af3333; }
 div.flash { margin: 4px 0 20px 0; }
 img.centered { display: block; margin-left: auto; margin-right: auto }
-div.counter { color: #000000; padding-left: 10px; padding-right: 10px;}
+div.counter { color: #000000; padding-left: 10px; padding-right: 10px; font-family: "Times New Roman", Times, serif; font-style: oblique;}
