--- a/flickipedia/web/templates/upload_complete.html
+++ b/flickipedia/web/templates/upload_complete.html
@@ -7,7 +7,7 @@
 {% if success %}
 File Upload successful.  Return to <a href="{{article_url}}">{{article}}</a>
 {% else %}
-File failed to upload.  Return to <a href="{{article_url}}">{{article}}</a>
+File failed to upload {{photourl}} due to "{{apierror}}".  Return to <a href="{{article_url}}">{{article}}</a>
 {% endif %}
 
 {% endblock %}
