formatting and ref fixes

--- a/flickipedia/web/templates/upload.html
+++ b/flickipedia/web/templates/upload.html
@@ -17,7 +17,7 @@
             <input type="text" class="input-xlarge" id="filename" name="filename" placeholder="Filename">
             <button type="submit" class="btn btn-success">Upload</button>
         </form>
-        <br>Back to <a href="{{article_url}}">{{article}}</a>
+        <br>Back to <a href="{{articleurl}}">{{article}}</a>
 
        <!-- TODO - Indicate if the photo has already been uploaded and by whom -->
     </div>
