--- a/flickipedia/web/templates/upload_complete.html
+++ b/flickipedia/web/templates/upload_complete.html
@@ -5,9 +5,9 @@
 <link href="twitter-bootstrap-v2\docs\assets\css\bootstrap-responsive.css" rel="stylesheet">
 
 {% if success %}
-File Upload successful.  Return to <a href="{{article_url}}">{{article}}</a>
+File Upload successful!<br><br>Return to <a href="{{articleurl}}">{{article}}</a>
 {% else %}
-File failed to upload {{photourl}} due to "{{apierror}}".  Return to <a href="{{article_url}}">{{article}}</a>
+File failed to upload {{photourl}} due to "{{apierror}}".<br><br>Return to <a href="{{articleurl}}">{{article}}</a>
 {% endif %}
 
 {% endblock %}
