--- a/flickipedia/web/templates/layout.html
+++ b/flickipedia/web/templates/layout.html
@@ -56,6 +56,12 @@
     <div class=flash>{{ message }}</div>
   {% endfor %}
   {% block body %}{% endblock %}
+
+        <hr>
+
+      <footer>
+        <p>Flickipedia 2014</p>
+      </footer>
 </div>
 </body>
 </html>
