--- a/flickipedia/web/templates/index.html
+++ b/flickipedia/web/templates/index.html
@@ -2,7 +2,7 @@
 {% block body %}
 {% if error %}<p class="text-warning"><strong>Warning:</strong> {{ error }}</p>{% endif %}
 
-<div class="hero-unit">
+<div class="jumbotron">
     <h1>Flickipedia</h1><br>
     <p>
         Welcome.  This is a tool that blends the photographic beauty of Flickr with the Encyclopedic richness of Wikipedia.
