--- a/flickipedia/web/static/css/navbar-static-top.css
+++ b/flickipedia/web/static/css/navbar-static-top.css
@@ -1,6 +1,4 @@
-body {
-  min-height: 2000px;
-}
-.navbar-static-top {
-  margin-bottom: 19px;
-}
+/*.navbar-static-top { margin-bottom: 19px; }*/
+.nav { width: 70%; }
+/*.nav li:last-child { color: #cacaca; float: right !important; }*/
+/*.nav li:last-child a { color: #0088cc; display: inline-block; }*/
