--- a/flickipedia/web/templates/index.html
+++ b/flickipedia/web/templates/index.html
@@ -17,12 +17,12 @@
     </p>
 </div>
 
-<form role="form" action="{{ url_for('mashup') }}" method=post>
+<form class="inline" role="form" action="{{ url_for('mashup') }}" method=post>
     <div class="form-group">
         <label for="article">Wikipedia Article:</label>
         <input name="article" type="text" class="form-control" id="article" placeholder="Enter article">
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+    <button type="submit" class="btn btn-success">Submit</button>
 </form>
 
 <div style="clear:both;">&nbsp;</div>
