add padding to the footer

--- a/flickipedia/web/templates/layout.html
+++ b/flickipedia/web/templates/layout.html
@@ -74,7 +74,9 @@
     <div class=flash>{{ message }}</div>
   {% endfor %}
   {% block body %}{% endblock %}
-  <hr><footer><p>Flickipedia 2014</p></footer>
+  <div class="footer">
+    <hr><footer><p>Flickipedia 2014</p></footer>
+  </div>
 </div>
 </body>
 </html>
