remove active class for now

--- a/flickipedia/web/templates/layout.html
+++ b/flickipedia/web/templates/layout.html
@@ -46,7 +46,7 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-left">
-              <li class="active"><a href="{{ url_for('home') }}">Home</a></li>
+              <li><a href="{{ url_for('home') }}">Home</a></li>
               <li><a href="{{ url_for('about') }}">About</a></li>
               <li><a href="{{ url_for('contact') }}">Contact</a></li>
               <li><a href="{{ url_for('register') }}">Register</a></li>
