fix padding for body

--- a/flickipedia/web/static/css/navbar-static-top.css
+++ b/flickipedia/web/static/css/navbar-static-top.css
@@ -1,4 +1,4 @@
-/*.navbar-static-top { margin-bottom: 19px; }*/
+.navbar-static-top { margin-bottom: 20px; }
 .nav { width: 70%; }
 /*.nav li:last-child { color: #cacaca; float: right !important; }*/
 /*.nav li:last-child a { color: #0088cc; display: inline-block; }*/
