--- a/flickipedia/web/static/css/site.css
+++ b/flickipedia/web/static/css/site.css
@@ -1,4 +1,4 @@
-body { padding-top: 60px; padding-bottom: 60px; }
+body { padding-bottom: 60px; }
 label.error { color: #af3333; }
 div.flash { margin: 4px 0 20px 0; }
 div.footer { padding-top: 50px; }
