add some backdrop to counts to make them easier to read

--- a/flickipedia/web/static/css/site.css
+++ b/flickipedia/web/static/css/site.css
@@ -3,4 +3,4 @@ label.error { color: #af3333; }
 div.flash { margin: 4px 0 20px 0; }
 div.footer { padding-top: 50px; }
 img.centered { display: block; margin-left: auto; margin-right: auto }
-div.counter { color: #000000; padding-left: 10px; padding-right: 10px; font-family: "Times New Roman", Times, serif; font-style: oblique;}
+div.counter { color: #000000; padding-left: 10px; padding-right: 10px; font-family: "Times New Roman", Times, serif;}
