update index docs

--- a/flickipedia/web/templates/index.html
+++ b/flickipedia/web/templates/index.html
@@ -13,6 +13,9 @@
         so there may be some kinks.
     </p>
     <p>
+        You can also <b>upload photos to <a href="http://commons.wikimedia.org">wikimedia commons</a></b> and vote on the relevance of a photo for an article, to find out how see the "about" page.
+    </p>
+    <p>
         Happy Viewing!
     </p>
 </div>
