--- a/flickipedia/web/templates/about.html
+++ b/flickipedia/web/templates/about.html
@@ -13,5 +13,7 @@ If you would like to upload a photo to commons follow the link below the image o
 Flickr search and Wikipedia search power Flickipedia.  Sometimes the photos that are chosen for an article are not entirely relevant, maybe not relevant at all, especially for the more obscure.  Because of this, small icons in the bottom left of the photo allow you to weigh in on whether you think this is a good or a bad photo for this article.
 <h3>Refreshing an Article</h3>
 Refreshing articles reloads the content from both Flickr and Wikipedia.  Also in doing so the relevance of photos based on endorsements are reordered according to any new endorsements.  To refresh an article append "&refresh" to the url in the query parameters (e.g. http://flikiwikimash.com/mashup?article=Truth&refresh).  A more convenient interface for this is coming!
+<h3>Troubleshooting</h3>
+Please send any queries or feedback to flikiwikimash@gmail.com, it'd be great to hear from you!
 {% endblock %}
 
