--- a/flickipedia/web/templates/about.html
+++ b/flickipedia/web/templates/about.html
@@ -5,15 +5,32 @@
 <p>This is a mashup of two beautiful services: <a href="https://en.wikipedia.org">Wikipedia</a> & <a href="https://www.flickr.com">Flickr</a>.
 See more on the <a href="https://github.com/rfaulkner/Flickipedia">project page</a>.  The purpose of this project is to provide a link from Flickr to Wikimedia commons.
 </p>
+
 <h3>Authenticating MediaWiki OAuth</h3>
-Follow the link to <a href="{{ url_for('mwoauth') }}">MWAuth</a> and provide access to Flickipedia.
+<br>Follow the link to <a href="{{ url_for('mwoauth') }}">MWAuth</a> and provide access to Flickipedia.<br><br>
+
+Step 1. Simply follow the callback url provided.<br><br>
+<img src="/static/img/about/oauth_1.png" height="200"><br><br>
+Step 2. With your MeidaWiki account authorize Flickipedia.<br><br>
+<img src="/static/img/about/oauth_2.png" height="250"><br><br>
+Step 3. You'll be redirected back to the application with a particular callback url:<br><br>
+<img src="/static/img/about/oauth_3.png" height="200"><br><br>
+Step 4. Submit this in the form from step 1.<br><br>
+<img src="/static/img/about/oauth_4.png" height="400"><br><br>
+Step 5. Success!  You'll be presented with a status message.  You can now upload to commons.<br><br>
+<img src="/static/img/about/oauth_5.png" height="200"><br><br>
+
 <h3>Uploading to Wikimedia Commons</h3>
 If you would like to upload a photo to commons follow the link below the image on an article page.  Provide a filename and click "Upload".  If you have provided access to Flickipedia the photo should be added to commons under your account.  All eligible photos are creative commons licensed.
+
 <h3>Endorsing Photos</h3>
 Flickr search and Wikipedia search power Flickipedia.  Sometimes the photos that are chosen for an article are not entirely relevant, maybe not relevant at all, especially for the more obscure.  Because of this, small icons in the bottom left of the photo allow you to weigh in on whether you think this is a good or a bad photo for this article.
+
 <h3>Refreshing an Article</h3>
 Refreshing articles reloads the content from both Flickr and Wikipedia.  Also in doing so the relevance of photos based on endorsements are reordered according to any new endorsements.  To refresh an article append "&refresh" to the url in the query parameters (e.g. http://flikiwikimash.com/mashup?article=Truth&refresh).  A more convenient interface for this is coming!
+
 <h3>Troubleshooting</h3>
 Please send any queries or feedback to flikiwikimash@gmail.com, it'd be great to hear from you!
+
 {% endblock %}
 
