some more instructions

--- a/flickipedia/web/templates/about.html
+++ b/flickipedia/web/templates/about.html
@@ -21,16 +21,23 @@ Step 5. Success!  You'll be presented with a status message.  You can now upload
 <img src="/static/img/about/oauth_5.png" height="200"><br><br>
 
 <h3>Uploading to Wikimedia Commons</h3>
-If you would like to upload a photo to commons follow the link below the image on an article page.  Provide a filename and click "Upload".  If you have provided access to Flickipedia the photo should be added to commons under your account.  All eligible photos are creative commons licensed.
+<br>If you would like to upload a photo to commons follow the link below the image on an article page.  Provide a filename and click "Upload".  If you have provided access to Flickipedia the photo should be added to commons under your account.  All eligible photos are creative commons licensed.<br><br>
+
+Step 1. Click the link below the image:<br><br>
+<img src="/static/img/about/upload_1.png" height="300"><br><br>
+Step 2. Name the file and upload.<br><br>
+<img src="/static/img/about/upload_2.png" height="300"><br><br>
 
 <h3>Endorsing Photos</h3>
-Flickr search and Wikipedia search power Flickipedia.  Sometimes the photos that are chosen for an article are not entirely relevant, maybe not relevant at all, especially for the more obscure.  Because of this, small icons in the bottom left of the photo allow you to weigh in on whether you think this is a good or a bad photo for this article.
+<br>Flickr search and Wikipedia search power Flickipedia.  Sometimes the photos that are chosen for an article are not entirely relevant, maybe not relevant at all, especially for the more obscure.  Because of this, small icons in the bottom left of the photo allow you to weigh in on whether you think this is a good or a bad photo for this article.<br><br>
+
+<img src="/static/img/about/endorse.png" height="300"><br><br>
 
 <h3>Refreshing an Article</h3>
-Refreshing articles reloads the content from both Flickr and Wikipedia.  Also in doing so the relevance of photos based on endorsements are reordered according to any new endorsements.  To refresh an article append "&refresh" to the url in the query parameters (e.g. http://flikiwikimash.com/mashup?article=Truth&refresh).  A more convenient interface for this is coming!
+<br>Refreshing articles reloads the content from both Flickr and Wikipedia.  Also in doing so the relevance of photos based on endorsements are reordered according to any new endorsements.  To refresh an article append "&refresh" to the url in the query parameters (e.g. http://flikiwikimash.com/mashup?article=Truth&refresh).  A more convenient interface for this is coming!
 
 <h3>Troubleshooting</h3>
-Please send any queries or feedback to flikiwikimash@gmail.com, it'd be great to hear from you!
+<br>Please send any queries or feedback to flikiwikimash@gmail.com, it'd be great to hear from you!
 
 {% endblock %}
 
