--- a/flickipedia/web/templates/contact.html
+++ b/flickipedia/web/templates/contact.html
@@ -2,5 +2,5 @@
 {% block body %}
 <h2>Contact</h2>
 {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
-<p>Contact me at bobs.ur.uncle@gmail.com.</p>
+<p>Contact me at flikiwikimash@gmail.com.</p>
 {% endblock %}
